corrects reaction times from the first and last trials of a block

--- a/analysis/sl-psychopy-analysis/blast_in_scanner_beh/blast_in_scanner_beh.ipynb
+++ b/analysis/sl-psychopy-analysis/blast_in_scanner_beh/blast_in_scanner_beh.ipynb
@@ -487,14 +487,14 @@
     "   auditory_case1 <- append (auditory_case1, i)\n",
     "\n",
     "  # If it's the first trial and there was no target keypress, count the response time from the following stimulus\n",
-    "  } else if (auditory_data[i,]$stimulus_trial==0) {\n",
+    "  } else if (auditory_data[i,]$stimulus_trial==0 & (auditory_data[i,])$condition==(auditory_data[i+1,]$condition)) {\n",
     "   # TO DO: test this auditory_condition\n",
     "    auditory_rt <- append (auditory_rt, 480+(auditory_data[i+1,][,\"keypress\"]))\n",
     "    auditory_case2 <- append (auditory_case2, i)\n",
     "  }  \n",
     "  \n",
-    "  # Otherwise, if the participant responded during the stimulus preceding the target, and the preceding stimulus was not also a target\n",
-    "  else if (!is.na(auditory_data[i-1,] [,\"keypress\"]) & ((auditory_data[i-1,][,\"tone_target\"] != (auditory_data[i-1,][,\"stimulus\"])))){\n",
+    "  # Otherwise, if the participant responded during the stimulus preceding the target, and the preceding stimulus was not also a target, and the preceding stimulus came from the same block\n",
+    "  else if (!is.na(auditory_data[i-1,] [,\"keypress\"]) & ((auditory_data[i-1,][,\"tone_target\"] != (auditory_data[i-1,][,\"stimulus\"]))) & (auditory_data[i,])$condition==(auditory_data[i-1,]$condition)){\n",
     "    # Count their response time as how much sooner they responded than when the stimulus was presented (anticipation)\n",
     "    auditory_rt <- append(auditory_rt, (auditory_data[i-1,][,\"keypress\"]-480))\n",
     "    auditory_case3 <- append (auditory_case3, i)\n",
@@ -507,8 +507,8 @@
     "    auditory_case4 <- append (auditory_case4, i)\n",
     "  }\n",
     "  \n",
-    "  # Otherwise, if the participant responded after the target\n",
-    "  else if (!is.na(auditory_data[i+1,]$keypress > 0) & (auditory_data[i+1,]$keypress > 0)){\n",
+    "  # Otherwise, if the participant responded after the target, and the following target came from the same block\n",
+    "  else if (!is.na(auditory_data[i+1,]$keypress > 0) & (auditory_data[i+1,]$keypress > 0) & (auditory_data[i,])$condition==(auditory_data[i+1,]$condition)){\n",
     "    # Count their response time as how much later they responded than when the stimulus was presented\n",
     "    auditory_rt <- append(auditory_rt, (480+auditory_data[i+1,][,\"keypress\"]))\n",
     "    auditory_case5 <- append (auditory_case5, i)\n",
