Julie updated fMRI data analysis and statistics

--- a/analysis/mri-analysis/blast/adult_fMRI_analysis.Rmd
+++ b/analysis/mri-analysis/blast/adult_fMRI_analysis.Rmd
@@ -13,20 +13,34 @@ library(Hmisc); library (WRS2); library(lme4); library(lmerTest); library(plyr);
 ```{r}
 setwd("/Volumes/data/projects/blast/data_summaries/")
 ast_df = read.csv("blast_in_lab_adult/behavioral/blast_assessments_adult.csv")
-accuracy_df = read.csv("blast_online_adult/breakdown/blast_online_adult_ssl_accuracies.csv")
-entropy_df = read.csv("blast_online_adult/breakdown/blast_online_adult_ssl_entropy.csv")
-rt_df = read.csv("blast_online_adult/breakdown/blast_online_adult_ssl_indiv_rts.csv")
+SSL_accuracy_df = read.csv("blast_online_adult/breakdown/blast_online_adult_ssl_accuracies.csv")
+SSL_entropy_df = read.csv("blast_online_adult/breakdown/blast_online_adult_ssl_entropy.csv")
+SSL_rt_df = read.csv("blast_online_adult/breakdown/blast_online_adult_ssl_indiv_rts.csv")
 
-colnames(accuracy_df)[colnames(accuracy_df)=="acc_id"] <- "subject"
-colnames(rt_df)[colnames(rt_df)=="par_id"] <- "subject"
-colnames(entropy_df)[colnames(entropy_df)=="part_id"] <- "subject"
-colnames(accuracy_df)[colnames(accuracy_df)=="subj_corr"] <- "accuracy"
+colnames(SSL_accuracy_df)[colnames(SSL_accuracy_df)=="acc_id"] <- "subject"
+colnames(SSL_accuracy_df)[colnames(SSL_accuracy_df)=="subj_corr"] <- "SSL_accuracy"
 
+colnames(SSL_rt_df)[colnames(SSL_rt_df)=="par_id"] <- "subject"
+colnames(SSL_entropy_df)[colnames(SSL_entropy_df)=="part_id"] <- "subject"
+
+SSL_rt_df <- SSL_rt_df[ -c(5:18) ]
+
+TSL_accuracy_df = read.csv("blast_online_adult/breakdown/blast_online_adult_tsl_accuracies.csv")
+TSL_entropy_df = read.csv("blast_online_adult/breakdown/blast_online_adult_tsl_entropy.csv")
+TSL_rt_df = read.csv("blast_online_adult/breakdown/blast_online_adult_tsl_indiv_rts.csv")
+
+colnames(TSL_accuracy_df)[colnames(TSL_accuracy_df)=="acc_id"] <- "subject"
+colnames(TSL_accuracy_df)[colnames(TSL_accuracy_df)=="subj_corr"] <- "TSL_accuracy"
+colnames(TSL_entropy_df)[colnames(TSL_entropy_df)=="part_id"] <- "subject"
+colnames(TSL_rt_df)[colnames(TSL_rt_df)=="par_id"] <- "subject"
+
+in_scanner_df <- read.csv("blast_in_lab_adult/behavioral/adult_in_scanner_auditory_behavioral.csv")
+colnames(in_scanner_df)[colnames(in_scanner_df)=="auditory_part_id"] <- "subject"
 ```
 ### Merge Dataframes
 ```{r}
 require(plyr)
-df <- join_all(list(ast_df,accuracy_df,entropy_df,rt_df), by = 'subject', type = 'full')
+df <- join_all(list(ast_df,SSL_accuracy_df,SSL_entropy_df,SSL_rt_df, TSL_accuracy_df,TSL_entropy_df,TSL_rt_df, in_scanner_df), by = 'subject', type = 'full')
 ```
 
 ### Remove subjects NOT included in fMRI analysis
@@ -39,15 +53,105 @@ df<- df[!grepl("blast_a_014", df$subject),]
 df<- df[!grepl("blast_a_015", df$subject),]
 df<- df[!grepl("blast_a_016", df$subject),]
 df<- df[!grepl("blast_a_019", df$subject),]
-df<- df[!grepl("blast_a_022", df$subject),]
 df<- df[!grepl("blast_a_025", df$subject),]
 df<- df[!grepl("blast_a_026", df$subject),]
 df<- df[!grepl("blast_a_028", df$subject),]
 df<- df[!grepl("blast_a_030", df$subject),]
 df<- df[!grepl("blast_a_019", df$subject),]
-df<- df[!grepl("blast_a_022", df$subject),]
-df <- df[-c(18:39), ]
-df <- df[ -c(15,20:33) ]
+df <- df[-c(19:40), ]
+```
+
+### Merge rows of data for same subject (e.g. blast_a_015/021)
+```{r}
+library(dplyr)
+df$subject <- gsub ("/s(2)","", df$subject, fixed = TRUE)
+df<- df %>% group_by(subject) %>% 
+       summarise_all(funs(na.omit(.)[1]))
+df$subject <- as.factor(as.character(df$subject))
 
 write.csv(df, "/Volumes/data/projects/blast/data_summaries/adult_composite_in_lab_online.csv")
+```
+
+### Load fMRI data and merge with current df
+```{r}
+mri_df = read.csv("merged_wholebrain_cope12_report.csv")
+df_mri_behav <- merge(df,mri_df,by="subject")
+```
+
+### Recode Copes into Tasks
+```{r}
+df_mri_behav$mri_task <- NA
+df_mri_behav$mri_task <- ifelse(df_mri_behav$cope == 1 & df_mri_behav$stat == 'stats/tstat1', 'tonestr_rand', 
+                                ifelse(df_mri_behav$cope == 1 & df_mri_behav$stat == 'stats/zstat1', 'tonestr_rand', 
+                                       ifelse(df_mri_behav$cope == 1 & df_mri_behav$stat == 'thresh_zstat1', 'tonestr_rand', 
+                                              ifelse(df_mri_behav$cope == 2 & df_mri_behav$stat == 'stats/tstat2', 'speechstr_rand', 
+                                                     ifelse(df_mri_behav$cope == 2 & df_mri_behav$stat == 'stats/zstat2', 'speechstr_rand',
+                                                           ifelse(df_mri_behav$cope == 2 & df_mri_behav$stat == 'thresh_zstat2', 'speechstr_rand', 
+                                                                  ifelse(df_mri_behav$cope == 1 & df_mri_behav$stat == 'stats/tstat2', 'tonerand_str', 
+                                ifelse(df_mri_behav$cope == 1 & df_mri_behav$stat == 'stats/zstat2', 'tonerand_str', 
+                                       ifelse(df_mri_behav$cope == 1 & df_mri_behav$stat == 'thresh_zstat2', 'tonerand_str', 
+                                              ifelse(df_mri_behav$cope == 2 & df_mri_behav$stat == 'stats/tstat1', 'speechrand_str', 
+                                                     ifelse(df_mri_behav$cope == 2 & df_mri_behav$stat == 'stats/zstat1', 'speechrand_str',
+                                                           ifelse(df_mri_behav$cope == 2 & df_mri_behav$stat == 'thresh_zstat1', 'speechrand_str','null'))))))))))))
+```
+
+### Recode Copes into Tasks Numeric
+```{r}
+df_mri_behav$mri_task_numeric <- NA
+df_mri_behav$mri_task_numeric <- ifelse(df_mri_behav$cope == 1 & df_mri_behav$stat == 'stats/tstat1', 0, 
+                                ifelse(df_mri_behav$cope == 1 & df_mri_behav$stat == 'stats/zstat1', 0, 
+                                       ifelse(df_mri_behav$cope == 1 & df_mri_behav$stat == 'thresh_zstat1', 0, 
+                                              ifelse(df_mri_behav$cope == 2 & df_mri_behav$stat == 'stats/tstat2', 1, 
+                                                     ifelse(df_mri_behav$cope == 2 & df_mri_behav$stat == 'stats/zstat2', 1,
+                                                           ifelse(df_mri_behav$cope == 2 & df_mri_behav$stat == 'thresh_zstat2', 1, 
+                                                                  ifelse(df_mri_behav$cope == 1 & df_mri_behav$stat == 'stats/tstat2', 2, 
+                                ifelse(df_mri_behav$cope == 1 & df_mri_behav$stat == 'stats/zstat2', 2, 
+                                       ifelse(df_mri_behav$cope == 1 & df_mri_behav$stat == 'thresh_zstat2', 2, 
+                                              ifelse(df_mri_behav$cope == 2 & df_mri_behav$stat == 'stats/tstat1', 3, 
+                                                     ifelse(df_mri_behav$cope == 2 & df_mri_behav$stat == 'stats/zstat1', 3,
+                                                           ifelse(df_mri_behav$cope == 2 & df_mri_behav$stat == 'thresh_zstat1', 3,'null'))))))))))))
+write.csv(df_mri_behav, "/Volumes/data/projects/blast/data_summaries/adult_composite_in_lab_online.csv")
+```
+
+## Statistics
+### Paired Samples T-test
+```{r eval=TRUE}
+df_mri_behav$mri_task_numeric <- as.numeric(df_mri_behav$mri_task_numeric)
+
+df_mri_subset1 <- subset(df_mri_behav, mri_task == "tonestr_rand" & stat == "stats/tstat1", select = subject:mri_task_numeric)
+df_mri_subset2 <- subset(df_mri_behav, mri_task == "speechstr_rand" & stat == "stats/tstat2", select = subject:mri_task_numeric)
+df_mri_subset <- rbind(df_mri_subset1,df_mri_subset2)
+
+t.test(df_mri_subset$mean, df_mri_subset$mri_task_numeric, paired = TRUE, alternative = "two.sided")
+```
+### Correlation
+```{r eval =TRUE}
+tone.cor <- cor.test(df_mri_subset1$mean, df_mri_subset1$nih_pvt_std, method = c("pearson"))
+speech.cor <- cor.test(df_mri_subset2$mean, df_mri_subset2$nih_pvt_std, method = c("pearson"))
+tone.cor$p.value
+tone.cor$estimate
+speech.cor$p.value
+speech.cor$estimate
+```
+
+### Linear Regression
+```{r eval=TRUE}
+vocab.linearMod <- lm(nih_pvt_std~ mri_task*mean, data=df_mri_subset) 
+summary(vocab.linearMod)
+
+IQ.linearMod <- lm(kbit_matrices_std~ mri_task*mean, data=df_mri_subset) 
+summary(IQ.linearMod)
+
+df_mri_subset$ctopp_nwr_std <- as.numeric(df_mri_subset$ctopp_nwr_std)
+ctopp.linearMod <- lm(ctopp_nwr_std~ mri_task*mean, data=df_mri_subset) 
+summary(ctopp.linearMod)
+
+flanker.linearMod <- lm(nih_flanker_std~ mri_task*mean, data=df_mri_subset) 
+summary(flanker.linearMod)
+```
+
+### GLMER --model does not converge
+```{r eval =TRUE}
+model.vocab<- lmer(nih_pvt_std~ 1 + mri_task_numeric*mean + (1|subject),data = df_mri_subset)
+summary(model.vocab)
 ```
